--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-parallax": "^3.0.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
