--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-parallax": "^3.0.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16"
   },
   "scripts": {
     "start": "react-scripts start",
