--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-modal": "^3.11.2",
     "react-parallax": "^3.0.3",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "typeface-roboto": "^0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
